--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,21 @@
     <title>Battleship</title>
   </head>
   <body>
+    <div class="container">
+      <div class="header"><h1>Battleship</h1></div>
 
+      <div class="contents">
+        <div class="player1">
+          <h3>Player 1</h3>
+          <div class="gameboard"></div>
+        </div>
+
+        <div class="player2">
+          <h3>Player 2</h3>
+          <div class="gameboard"></div>
+        </div>
+
+      </div>
+    </div>
   </body>
 </html>
